--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohappyeyeballs==2.5.0
 aiohttp==3.11.13
+aioresponses==0.7.8
 aiosignal==1.3.2
 annotated-types==0.7.0
 attrs==25.1.0
@@ -15,6 +16,7 @@ frozenlist==1.5.0
 fsspec==2025.2.0
 huggingface-hub==0.29.2
 idna==3.10
+iniconfig==2.0.0
 isort==6.0.1
 Jinja2==3.1.6
 MarkupSafe==3.0.2
@@ -27,13 +29,18 @@ numpy==2.2.3
 packaging==24.2
 pathspec==0.12.1
 platformdirs==4.3.6
+pluggy==1.5.0
 propcache==0.3.0
 pycodestyle==2.12.1
 pydantic==2.10.6
 pydantic_core==2.27.2
 pyflakes==3.2.0
+pytest==8.3.5
+pytest-asyncio==0.26.0
+pytest-mock==3.14.0
 python-dotenv==1.0.1
 PyYAML==6.0.2
+redis==5.2.1
 regex==2024.11.6
 requests==2.32.3
 safetensors==0.5.3
