--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,11 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Load .test_env file into ENV
+        run: |
+          set -a
+          source .test_env
+          set +a
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
