--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      KAFKA_SERVER: ${{vars.KAFKA_SERVER}}
+      KAFKA_PORT: ${{vars.KAFKA_PORT}}
+      REDIS_SERVER: ${{vars.REDIS_SERVER}}
+      REDIS_PORT: ${{vars.REDIS_PORT}}
+      TTL_NEW_TAG: ${{vars.TTL_NEW_TAG}}
+      TTL_ERRORED_TAG: ${{vars.TTL_ERRORED_TAG}}
     strategy:
       fail-fast: false
       matrix:
@@ -20,11 +27,6 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Load .test_env file into ENV
-        run: |
-          set -a
-          source .test_env
-          set +a
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
