--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,26 @@
-aiohappyeyeballs==2.5.0
-aiohttp==3.11.13
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
 aioresponses==0.7.8
 aiosignal==1.3.2
 annotated-types==0.7.0
-attrs==25.1.0
-beautifulsoup4==4.13.3
-black==25.1.0
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-confluent-kafka==2.8.2
-filelock==3.17.0
-flake8==7.1.2
-frozenlist==1.5.0
-fsspec==2025.2.0
-huggingface-hub==0.29.2
+attrs==25.3.0
+beautifulsoup4==4.13.4
+confluent-kafka==2.10.0
+frozenlist==1.6.0
 idna==3.10
-iniconfig==2.0.0
-isort==6.0.1
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-mccabe==0.7.0
-mpmath==1.3.0
-multidict==6.1.0
-mypy-extensions==1.0.0
-networkx==3.4.2
-numpy==2.2.3
-packaging==24.2
-pathspec==0.12.1
-platformdirs==4.3.6
+iniconfig==2.1.0
+multidict==6.4.3
+packaging==25.0
 pluggy==1.5.0
-propcache==0.3.0
-pycodestyle==2.12.1
-pydantic==2.10.6
-pydantic_core==2.27.2
-pyflakes==3.2.0
+propcache==0.3.1
+pydantic==2.11.3
+pydantic_core==2.33.1
 pytest==8.3.5
 pytest-asyncio==0.26.0
 pytest-mock==3.14.0
-python-dotenv==1.0.1
-PyYAML==6.0.2
+python-dotenv==1.1.0
 redis==5.2.1
-regex==2024.11.6
-requests==2.32.3
-safetensors==0.5.3
-setuptools==75.8.2
-soupsieve==2.6
-sympy==1.13.1
-tokenizers==0.21.0
-torch==2.6.0
-tqdm==4.67.1
-transformers==4.49.0
-typing_extensions==4.12.2
-urllib3==2.3.0
-yarl==1.18.3
+soupsieve==2.7
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+yarl==1.20.0
